--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .nav-bar {
@@ -24,7 +25,6 @@ padding: 0.6rem;
     text-decoration: none;
     color: black;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
 }
 
@@ -35,6 +35,38 @@ padding: 0.6rem;
     border: none;
     border-radius: 2px;
     font-size: 10px;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+}
+
+.container {
+    width: 80%;
+    margin: auto;
+    margin-top: 3rem;
+}
+
+.main-title {
+    margin-top: 25px;
+    margin-left: 8rem;
+    margin-bottom: 1rem;
+    font-size: 40px;
+    font-weight: bold;
+    font-style: italic;
+    line-height: 1.2;
+}
+
+.title-image {
+    width: 60vw;
+}
+
+.image-description {
+    margin: 0.7rem 13.5rem 0.7rem 0;
+    font-size: 15px;
+    color: #666;
+    line-height: 1.2;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.image-description small {
+    font-size: 12px;
+    color: #888;
 }
