--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+    /* nav bar */
 .nav-bar {
     display: flex;
     padding: 0.9rem;
@@ -37,7 +37,7 @@ padding: 0.6rem;
     font-size: 10px;
     font-weight: bold;
 }
-
+    /* Main section */
 .container {
     width: 80%;
     margin: auto;
@@ -69,4 +69,35 @@ padding: 0.6rem;
 .image-description small {
     font-size: 12px;
     color: #888;
+}
+
+main {
+    padding-bottom: 100px;
+    
+}
+
+.article-header {
+    width: 100%;
+    height: 50px;
+    position: relative;
+    padding-top: 30px;
+    
+}
+
+.main-buttons {
+position: absolute;
+bottom: 0px;
+right: 0px;
+}
+
+.main-text {
+    width: 50vw;
+    margin: auto;
+}
+
+.main-text>p {
+    padding: 50px;
+    font-size: x-large;
+    line-height: 1.5em;
+    color: rgb(82, 80, 80);
 }
