fixed & placed aside grid

--- a/style.css
+++ b/style.css
@@ -105,27 +105,31 @@ right: 0px;
 aside {
     display: grid;
     grid-template-columns: 70px 140px;
+    grid-template-rows: repeat(5, auto);
+    grid-gap: 10px;
     grid-template-areas:"header header" 
                         "image  text"
                         "image  text"
                         "image  text"
                         "image  text";
-    border: 1px solid red;
+    right: 70px;
+    position: absolute;
 }
 
 .aside-header {
     border-bottom: 1px solid grey;
-    padding: 5px;
+    height: 1em;
+    text-align: center;
     grid-area: header;
-    justify-self: center;
+    justify-self: start;
 }
 
-aside>p {
-    grid-area: text;
+aside>a {
+    grid-area: "text";
 }
 
-aside img {
-    grid-area: image;
+aside>img {
+    grid-area: "image";
     height: 70px;
 
 }
