--- a/style.css
+++ b/style.css
@@ -264,6 +264,58 @@ footer div {
     padding-top: 15px;
 }
 
+.article-4 {
+    padding: 50px;
+    font-size: x-large;
+    line-height: 1.5em;
+    color: rgb(82, 80, 80);  
+}
+
+iframe {
+    margin-top: 3rem;
+    width: 100%;
+}
+
+.video-description {
+    font-size: 15px;
+    color: #666;
+    line-height: 1.2;
+    font-family: Georgia, 'Times New Roman', Times, serif;  
+}
+
+.video-description small {
+    font-size: 12px;
+    color: #888;
+}
+
+.article-4 img {
+    width:100%
+}
+
+.article-4 h3 {
+    font-weight: bold;
+    color: rgb(46, 41, 41);
+}
+
+.article-image-description {
+    font-size: 16px;
+    color: #666;
+    line-height: 1.2;
+    font-family: Georgia, 'Times New Roman', Times, serif;    
+}
+
+.article-image-description small {
+    font-size: 12px;
+    color: #888;
+}
+
+.article-reference small {
+    font-size: 12px;
+    color: #888;
+  
+   
+}
+
 
 
 
