--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
     /* nav bar */
 .nav-bar {
@@ -77,27 +78,31 @@ main {
 }
 
 .article-header {
-    width: 100%;
+    width: 85%;
     height: 50px;
     position: relative;
-    padding-top: 30px;
+    padding: 30px 50px;
+    display: flex;
+    justify-content: space-between;
     
 }
 
-.main-buttons {
-position: absolute;
-bottom: 0px;
-right: 0px;
+.article-header i {
+    padding: 7px;
+    
 }
 
-.main-text {
+
+
+.main-text{
     width: 50vw;
     margin: auto;
+    
 }
 
 .main-text>p {
     padding: 50px;
-    font-size: x-large;
+    font-size: 12px;
     line-height: 1.5em;
     color: rgb(82, 80, 80);
 }
@@ -309,14 +314,55 @@ iframe {
     color: #888;
 }
 
-.article-reference small {
-    font-size: 12px;
-    color: #888;
-  
+.article-reference {
+    padding-top: 20px;
+    font-size: x-small;
+    line-height: 1.5em;
+}
+
+.article-reference a {
+    padding: 3px;
+}
+
+.bottom-nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 50px;
+}
+
+.bottom-nav button {
+    background: #326891;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    height: 1.5em;
+}
+
+.bottom-nav-icons i {
+    padding: 7px;
+}
+
+.bottom-grid {
+    display: grid;
+    grid-template-rows: 25px 1fr 1fr 25px 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 15px;
+    
+}
+
+.bottom-grid-main {
+    grid-row: 2 / 4;
+    grid-column: 1 / 4;
+    grid-template-columns: subgrid;
+    grid-template-rows: subgrid;
+}
+.grid-item1, .grid-item2, .grid-item3, .grid-item4, .grid-item5, .grid-item6 {
+    object-fit: cover;
    
 }
 
-
-
-
-
+.bottom-grid img {
+    height: 50px;
+    width: 50px;
+    position: relative;
+}
