--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ iframe {
     grid-area: main;
     display: grid;
     grid-gap: 15px;
-    grid-template: 25px 1fr 1fr / repeat(3, 1fr);
+    grid-template: 25px 330px 330px / repeat(3, 1fr);
     white-space: normal;
     
 }
@@ -390,6 +390,7 @@ iframe {
 .bottom-grid-main > div > a {
     margin-top: 15px;
 }
+
     
 
 .bottom-grid img {
@@ -410,4 +411,38 @@ iframe {
     color: black;
     font-weight: bold;
     
+}
+
+.side-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 25px repeat(10, 1fr);
+    grid-auto-flow: row;
+    grid-gap: 15px;
+    height: fit-content;
+
+}
+
+.side-grid h3 {
+    border-top: 1px solid blac;
+    color: black;
+    font-weight: bold; 
+    font-size: 16px;
+    padding: 10px 0px;
+    margin-bottom: 10px;
+    align-items: center;
+    /* padding: 1.5em 0em; */
+}
+
+.side-grid a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    padding: 0px 0px 5px 0px;
+    height: 100%;
+    line-height: 1.5em;
+    font-weight: 500;
+    font-size: 18px;
+    border-top: 1px solid rgb(233, 220, 220);
+
 }
