--- a/style.css
+++ b/style.css
@@ -95,12 +95,13 @@ main {
 
 
 .main-text{
-    width: 50vw;
+    /* width: 50vw; */
     margin: auto;
+    width: 80%;
     
 }
 
-.main-text>p {
+.main-text > p {
     padding: 50px;
     font-size: 12px;
     line-height: 1.5em;
@@ -139,25 +140,32 @@ aside>img {
 
 }
 
+.article-1, .article-2, .article-3, .article-4 {
+    width: 70%;
+    margin: 0 auto;
+    color:  #666;
+    font-size: 20px;
+    line-height: 2em;
+}
+
+.article-1, .article-2, .article-3, .article-4 p {
+    padding-bottom: 1.5em;
+}
+
+.article-4 {
+    padding: 2em;
+}
+
+
 .article-2 h2 {
     font-weight: bold;
+    padding: 1.5em;
     margin-left: 2.5rem;
     margin-bottom: -1.5rem;
     color: rgb(82, 80, 80);
     font-size: 20px;
 }
 
-.article-2 p {
-    padding: 40px;
-    font-size: x-large;
-    line-height: 1.5em;
-    color: rgb(82, 80, 80);
-}
-
-.article-3 {
-    width: 55vw;
-    margin-bottom: 20px;
-}
 
 
 .article-3 h2 {
@@ -167,16 +175,10 @@ margin-bottom: .5rem;
 font-weight: bold;
 }
 
-.article-3 p {
-    font-size: 15px;
-    color: #666;
-    line-height: 1.2;
-    font-family: Georgia, 'Times New Roman', Times, serif; 
-    margin-left: -6rem; 
-}
 
 .article-3-image-text {
     display: grid;
+    margin: 0 auto;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
@@ -262,19 +264,15 @@ margin: 0 0 13px;
 font-size: smaller;
 background-color:
 #000;
+
 }
 
 footer div {
     width: 100vw;
-    padding-top: 15px;
+    padding: 15px;
+    
 }
 
-.article-4 {
-    padding: 50px;
-    font-size: x-large;
-    line-height: 1.5em;
-    color: rgb(82, 80, 80);  
-}
 
 iframe {
     margin-top: 3rem;
@@ -344,9 +342,8 @@ iframe {
 
 .bottom-grid {
     display: grid;
-    position: absolute;
-    right: 5%;
-    left: 5%;
+    width: 80vw;
+   
     grid-template-rows: 2fr 1fr 1fr;
     grid-template-columns: 2.5fr 1fr;
     grid-gap: 15px;
