--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+    }
     
-}
     /* nav bar */
 .nav-bar {
     display: flex;
@@ -98,6 +98,7 @@ main {
     /* width: 50vw; */
     margin: auto;
     width: 80%;
+    justify-content: center;
     
 }
 
@@ -105,7 +106,7 @@ main {
     padding: 50px;
     font-size: 12px;
     line-height: 1.5em;
-    color: rgb(82, 80, 80);
+    color: rgb(0, 0, 0);
 }
 
 aside {
@@ -140,10 +141,9 @@ aside>img {
 
 }
 
-.article-1, .article-2, .article-3, .article-4 {
+.article-1, .article-2, .article-4 {
     width: 70%;
     margin: 0 auto;
-    color:  #666;
     font-size: 20px;
     line-height: 2em;
 }
@@ -166,13 +166,17 @@ aside>img {
     font-size: 20px;
 }
 
-
+.article-3 {
+    width: 100%;
+    font-size: smaller;
+    color: grey;
+}
 
 .article-3 h2 {
-font-size: 20px;
-margin-left: -6rem;
-margin-bottom: .5rem;
-font-weight: bold;
+    font-size: 20px;
+    margin-bottom: .5rem;
+    font-weight: bold;
+    color: black;
 }
 
 
@@ -316,6 +320,7 @@ iframe {
     padding-top: 20px;
     font-size: x-small;
     line-height: 1.5em;
+    color: grey;
 }
 
 .article-reference a {
@@ -325,7 +330,9 @@ iframe {
 .bottom-nav {
     display: flex;
     justify-content: space-between;
-    padding: 0px 50px;
+    padding: 60px;
+    width: 70%;
+    margin: auto;
 }
 
 .bottom-nav button {
@@ -333,7 +340,8 @@ iframe {
     color: white;
     border: none;
     border-radius: 3px;
-    height: 1.5em;
+    height: 2.5em;
+    width: 22em;
 }
 
 .bottom-nav-icons i {
@@ -344,13 +352,12 @@ iframe {
     display: grid;
     width: 80vw;
    
-    grid-template-rows: 2fr 1fr 1fr;
+    grid-template-rows: 2fr 1fr;
     grid-template-columns: 2.5fr 1fr;
     grid-gap: 15px;
     grid-template-areas: 
     "main   side"
-    "bottom side"
-    "last   last";
+    "bottom side";
     
 }
 
@@ -359,7 +366,7 @@ iframe {
     grid-area: main;
     display: grid;
     grid-gap: 15px;
-    grid-template: 25px 330px 330px / repeat(3, 1fr);
+    grid-template: 25px 1fr 1fr / repeat(3, 1fr);
     white-space: normal;
     
 }
@@ -419,6 +426,7 @@ iframe {
     grid-auto-flow: row;
     grid-gap: 15px;
     height: fit-content;
+    grid-area: side;
 
 }
 
@@ -455,15 +463,32 @@ iframe {
 }
 
 .last-grid {
-    grid-area: last;
     display: grid;
     grid-template: 25px 1fr 25px / repeat(6, 1fr);
+    border-top: 3px double lightgray;
+    font-size: smaller;
+    
 }
 
 .last-grid > img {
     grid-column: 1 / 6;
     width: 20%;
     height: 40px;
+}
+
+.last-grid h4 {
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-bottom: 1em;
+    text-align: start;
+    color: rgb(41, 41, 41);
+}
+
+.last-grid > a {
+    grid-column: span 1 /-1;
+    padding: 1.5em;
+    font-size: x-small;
+    text-align: end;
 }
 
 .column1 {
@@ -479,11 +504,35 @@ iframe {
 
 .last-grid-links {
     display: block;
-    padding: 10px;
+    padding-bottom: 1em;
+    color: black;
+    text-decoration: none;
+}
+
+.last-grid-links:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.bold {
+    text-transform: capitalize;
+    font-weight: bold;
 }
 
 .column2 {
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
     padding: 2em;
+}
+
+.column6 {
+    border-left: 1px solid lightgray;
+}
+
+.column6 :nth-child(7) {
+    border-bottom: 1px solid lightgray;
+}
+
+.column6 :nth-child(8) {
+    padding-top: .5em;
 }
